2006-12-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/30216:
	* javax/management/MBeanServerDelegate.java:
	Initialise list of listeners immediately.
	(addListener(NotificationListener)): Remove list
	construction.
	
2006-12-21  David Daney  <ddaney@avtrex.com>

	* gnu/java/net/protocol/http/Headers.java: Update imports.  Implement
	Iterable<Headers.HeaderElement>.
	(iterator): Make public.
	* gnu/java/net/protocol/http/Request.java (dispatch): Use enhanced for
	loop.
	(notifyHeaderHandlers): Same.
	* gnu/java/net/protocol/http/SimpleCookieManager.java (addCookies):
	Remove unneeded cast.

2006-12-21  Mario Torre  <neugens@limasoftware.net>

	* .settings/org.eclipse.jdt.core.prefs: set compilation flag to warning
	instead of error for empty control flow statements.
	* gnu/javax/swing/text/html/css/CSSParser.java (parseSelector): 
	(parseValue): Reverted last change.
	* java/text/BreakIterator.java (preceding): likewise.
	* external/jsr166/java/util/AbstractQueue.java (clear): likewise.
	* gnu/java/io/Base64InputStream.java (read): likewise.
	* javax/swing/text/DefaultStyledDocument.java (ElementBuffer.insertUpdate): 
	likewise.
	* java/util/zip/DeflaterEngine.java (findLongestMatch): likewise.
	* java/util/zip/ZipInputStream.java (closeEntry): likewise.
	* java/util/zip/DeflaterHuffman.java (Tree.buildLength): likewise.
	* java/io/StreamTokenizer.java (nextToken): likewise.
	* gnu/javax/imageio/png/PNGICCProfile.java (PNGICCProfile): likewise.
	* gnu/java/awt/font/opentype/truetype/VirtualMachine.java (execute):
	likewise.
	* gnu/java/nio/charset/ByteCharset.java (Decoder.decodeLoop): likewise.
	Also fixed typo.
	* gnu/java/awt/print/PostScriptGraphics2D.java (spoolPostScript): likewise.
	* gnu/java/awt/print/JavaPrinterGraphics.java (spoolPostScript): likewise.
	* gnu/javax/net/ssl/provider/SSLRSASignatureImpl.java (engineVerify):
	likewise.
	* javax/swing/text/html/CSSParser.java: 
	(parse): likewise.