@@ -1,5 +1,12 @@
 2006-12-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR classpath/30217:
+	* javax/management/ObjectName.java:
+	(getKeyPropertyList()): Remove cast and call
+	to UnmodifiableMap.
+	
+2006-12-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR classpath/30216:
 	* javax/management/MBeanServerDelegate.java:
 	Initialise list of listeners immediately.
